--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio ex saepe, veniam assumenda repudiandae quas adipisci, enim ipsum quod eum dolorum pariatur omnis! Placeat corrupti architecto perferendis quisquam, est omnis.
+    </p>
 </body>
 </html>
